--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Compilando
       run: |
             cd src
-            java -cp . Main.java 
+            javac -cp . Main.java 
     - name: Executando
       run: |
             cd src
