--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -33,3 +33,12 @@ jobs:
       run: |
             cd src
             javac -cp . Main.java 
+    - uses: mr-smithers-excellent/docker-build-push@v6
+      name: Deploy Docker image
+      with:     
+           image: fidasgabriel/aula_revisao
+           tags: ${{ github.run_number }}
+           registry: docker.io
+           dockerfile: dockerfile
+           username: ${{ secrets.DOCKER_USER }}
+           password: ${{ secrets.DOCKER_PASSWORD }}
